# Capi

./: '  .gitignore  Cargo.toml  input.css  package-lock.json  package.json  pnpm-lock.yaml
api/: Cargo.toml
api/src/: auth.rs  category.rs  channel.rs  files.rs  lib.rs  presence.rs  server.rs  sidebar.rs  theme.rs  user.rs
api/src/convex/: mod.rs  subscripton.rs
api/src/convex/mutations/: invitation.rs  member.rs  messages.rs  mod.rs  status.rs
app/: Cargo.toml
app/src/: lib.rs
app/src/api/: theme.rs
app/src/components/: copy.rs  mod.rs
app/src/components/auth/: form.rs  mod.rs
app/src/components/emojis/: mod.rs
app/src/components/icons/: mod.rs
app/src/components/primitives/: arrow.rs  avatar.rs  button.rs  collapsible.rs  mod.rs  portal.rs  separator.rs  tooltip.rs
app/src/components/primitives/common/: mod.rs  status.rs
app/src/components/primitives/context_menu/: mod.rs
app/src/components/primitives/dialog/: mod.rs
app/src/components/primitives/dialog/overlay/: mod.rs
app/src/components/primitives/dialog/popup/: mod.rs
app/src/components/primitives/dialog/portal/: mod.rs
app/src/components/primitives/dialog/root/: mod.rs  use_dialog_root.rs
app/src/components/primitives/dialog/trigger/: mod.rs
app/src/components/primitives/dropdown_menu/: mod.rs
app/src/components/primitives/menu/: backdrop.rs  content.rs  group_label.rs  item.rs  mod.rs  portal.rs  separator.rs  trigger.rs
app/src/components/primitives/popper/: mod.rs
app/src/components/primitives/tabs/: indicator.rs  list.rs  mod.rs  panel.rs  tab.rs
app/src/components/roles/: mod.rs
app/src/components/ui/: avatar.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  checkbox.rs  collapsible.rs  context.rs  dialog.rs  divider.rs  dropwdown.rs  input.rs  markdown.rs  mod.rs  sheet.rs  sidebar.rs  skeleton.rs  switch.rs  tabs.rs  theme.rs  toast.rs  tooltip.rs
app/src/components/uploadthing/: input.rs  mod.rs
app/src/hooks/: mod.rs  sycn.rs
app/src/routes/: home.rs  landing.rs  mod.rs
app/src/routes/auth/: mod.rs  redirect.rs
app/src/routes/home/: mod.rs
app/src/routes/home/components/: collapsible.rs  icons.rs  mod.rs  navbar.rs  profile.rs  servers.rs  sidebar.rs
app/src/routes/home/components/dialogs/: create_category.rs  create_channel.rs  create_server.rs  mod.rs
app/src/routes/home/components/server_settings/: mod.rs
app/src/routes/home/components/server_settings/content/: mod.rs  profile.rs
app/src/routes/home/components/server_settings/sidebar/: mod.rs
app/src/routes/home/components/user_settings/: mod.rs  sidebar.rs
app/src/routes/home/components/user_settings/content/: preferences.rs  profiles.rs
app/src/routes/home/components/variants/private/: conversations.rs  mod.rs
app/src/routes/home/components/variants/server/: categories.rs  channels.rs  header.rs  mod.rs
app/src/routes/home/private/: mod.rs
app/src/routes/home/private/conversation/: mod.rs
app/src/routes/home/private/conversation/messages/: mod.rs
app/src/routes/home/private/conversation/sender/: input.rs  mod.rs
app/src/routes/home/server/: mod.rs
app/src/routes/home/server/channel/: mod.rs
app/src/routes/home/server/channel/components/: header.rs  mod.rs  pin.rs
app/src/routes/home/server/channel/components/chat/: dropzone.rs  mod.rs  sender.rs  unread.rs
app/src/routes/home/server/channel/components/chat/messages/: group.rs  message_actions.rs  message_attachments.rs  message_content.rs  message_header.rs  message_item.rs  message_reactions.rs  message_reference.rs  mod.rs  pin.rs  utils.rs
app/src/routes/home/server/channel/components/chat/sender/: actions.rs  attachments.rs  (+3 more)
app/src/routes/home/server/channel/components/sidebar/: card.rs  members.rs  mod.rs  roles.rs
app/src/routes/home/server/components/: mod.rs
app/src/routes/home/servers/: header.rs  mod.rs
app/src/routes/home/servers/content/: discover.rs  mod.rs  servers.rs
app/src/routes/servers/: mod.rs
app/src/routes/servers/components/: collapsible.rs  icons.rs  mod.rs  navbar.rs  servers.rs  sidebar.rs
app/src/routes/servers/components/dialogs/: create_category.rs  mod.rs
app/src/routes/servers/components/server_settings/content/: mod.rs  profile.rs
app/src/routes/servers/components/settings/: content.rs  mod.rs  sidebar.rs
app/src/routes/servers/components/settings/content/: mod.rs  preferences.rs  profiles.rs
app/src/routes/servers/components/user_settings/: mod.rs
app/src/routes/servers/components/user_settings/content/: preferences.rs  profiles.rs
app/src/routes/servers/components/variants/: discover.rs  inbox.rs  mod.rs  private.rs  search.rs  servers.rs
app/src/routes/servers/components/variants/server/: categories.rs  channels.rs  header.rs  mod.rs
app/src/routes/servers/server/channel/: mod.rs
app/src/routes/servers/server/channel/components/: chat.rs  content.rs  header.rs  mod.rs
app/src/routes/servers/server/channel/components/chat/: mod.rs  sender.rs
app/src/routes/servers/server/channel/components/sidebar/: members.rs  mod.rs  roles.rs
app/src/sync/: mod.rs
auth/: Cargo.toml
auth/src/: lib.rs
auth/src/clients/: mod.rs
capi-ui/: Cargo.toml
capi-ui/src/: avatar.rs  context.rs  dialog.rs  dropwdown.rs  lib.rs  toast.rs  tooltip.rs
common/: Cargo.toml
common/src/: files.rs  lib.rs  state.rs  user.rs
common/src/convex/: mod.rs
convex-client/: Cargo.toml
convex-client/src/: lib.rs
convex-client/src/base/: mod.rs  query_result.rs  request_manager.rs
convex-client/src/leptos/: json.rs  mod.rs  subscription.rs  worker.rs
convex-client/src/server/: mod.rs  subscription.rs  worker.rs
convex-client/src/websocket/: client.rs  mod.rs  server.rs
server/: Cargo.toml
server/migrations/: 20250629000001_create_auth_tables.sql
server/src/: main.rs
sync_types/: Cargo.toml
sync_types/src/: backoff.rs  function_name.rs  headers.rs  identifier.rs  json.rs  lib.rs  module_path.rs  path.rs  timestamp.rs  types.rs  udf_path.rs
uploadthing/: Cargo.toml
uploadthing/src/: lib.rs
uploadthing/src/server/: list_files.rs  mod.rs  upload_file.rs
(+52 files in other folders)
