[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
convex-client = { path = "../convex-client", optional = true }

common = { path = "../common", optional = true }
http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
axum-extra = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
web-sys = { workspace = true }
strum.workspace = true
strum_macros.workspace = true
reactive_stores.workspace = true
floating-ui-leptos.workspace = true
leptos-node-ref.workspace = true
leptos_dom.workspace = true
send_wrapper.workspace = true
leptos-typed-fallback-show.workspace = true
tailwind_fuse.workspace = true
futures.workspace = true
serde.workspace = true 
serde_json.workspace = true
async-broadcast.workspace = true
gloo-timers.workspace = true
leptos-use.workspace = true
uuid.workspace = true
chrono.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
gloo-file.workspace = true
uploadthing = { path = "../uploadthing", optional = true }

[features]
default = []
hydrate = ["leptos/hydrate", "api/hydrate", "dep:common", "dep:uploadthing",  "convex-client/hydrate"]
ssr = ["api/ssr", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:convex-client", "dep:leptos_axum", "dep:axum-extra", "dep:axum", "dep:common", "dep:uploadthing"]
