[package]
name = "capi-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos.workspace = true
tailwind_fuse.workspace = true
capi-primitives = { path = "../capi-primitives", optional = true }
web-sys.workspace = true
leptos_router.workspace = true
icons = { path = "../icons" }
send_wrapper.workspace = true
leptos-node-ref.workspace = true
reactive_stores.workspace = true
strum.workspace = true
strum_macros.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate",  "capi-primitives/hydrate"]
ssr = ["leptos/ssr",  "capi-primitives/ssr"]
