[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
leptos.workspace = true
strum.workspace = true
strum_macros.workspace = true
gloo-file.workspace = true
web-sys.workspace = true
rand = { workspace = true, optional = true }

axum = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true } 
convex-client = { path = "../convex-client", optional = true }

[features]
hydrate = []
ssr = ["dep:sqlx", "dep:rand", "dep:axum", "dep:leptos_axum", "convex-client/ssr"]
