[package]
name = "convex-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
async-trait.workspace = true
futures.workspace = true
url.workspace = true
convex_sync_types = { path = "../sync_types" }
serde_json.workspace = true
gloo-net = { workspace = true }
gloo-timers = { workspace = true }
leptos.workspace = true
uuid.workspace = true
wasm-bindgen-futures.workspace = true
web-time.workspace = true
js-sys.workspace = true
imbl.workspace = true
base64.workspace = true

async-broadcast.workspace = true
dotenv.workspace = true
dotenv_codegen.workspace = true
tokio = { workspace = true, optional = true }
tokio-stream  = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["dep:tokio", "leptos/ssr", "dep:tokio-tungstenite", "dep:rand",  "dep:tokio-stream"]
