[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
common = { path = "../common",  default-features = false, features = ["ssr"]}
uploadthing = { path = "../uploadthing" }
auth = { path = "../auth" }
# convex_struct = { path = "../convex", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
axum_session_auth.workspace = true
axum_session_sqlx.workspace = true
sqlx.workspace = true
oauth2.workspace = true
anyhow.workspace = true
axum_session.workspace = true
async-trait.workspace = true
dotenv.workspace = true
dotenv_codegen.workspace = true
convex-client = { path = "../convex-client" }
