[package]
name = "convex_sync_types"
description = "Sync types for the Convex Websocket protocol (convex.dev)"
version = "0.9.0"
authors = [ "Convex, Inc. <no-reply@convex.dev>" ]
edition = "2024"

[dependencies]
anyhow.workspace = true
base64.workspace = true
derive_more.workspace = true
headers.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
