[package]
name = "uploadthing"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
anyhow.workspace = true
tokio = { workspace = true, optional = true }
serde_json.workspace = true
futures= { workspace = true, optional = true }
http= { workspace = true, optional = true }
reqwest= { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
urlencoding = { workspace = true, optional = true }
strum.workspace = true
strum_macros.workspace = true

[features]
default = []
hydrate = []
ssr = ["dep:tokio", "dep:tokio-util", "dep:urlencoding", "dep:reqwest", "dep:futures", "dep:http"]
